--- a/src/main/resources/templates/error.html
+++ b/src/main/resources/templates/error.html
@@ -1,11 +1,10 @@
-<!-- <!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="fr">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Erreur - Loooser</title>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300&display=swap" rel="stylesheet">
-    <link href
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" rel="stylesheet">
     <style>
         body {
@@ -129,9 +128,9 @@
     <h1>Oups !</h1>
     <h2>Loooser</h2>
     <p class="message">Tu as fait une erreur, mon ami. Mais t'inquiète, ça arrive aux meilleurs !</p>
--->
+
     <!-- Affichage de l'erreur spécifique -->
-<!--  <div class="error-detail">
+ <div class="error-detail">
       <p><strong>Erreur :</strong> <span id="error-message"></span></p>
   </div>
 </div>
@@ -160,4 +159,3 @@
 </script>
 </body>
 </html>
--->
