--- a/src/main/resources/static/css/filtre-index-recherche.css
+++ b/src/main/resources/static/css/filtre-index-recherche.css
@@ -1,193 +1,179 @@
-:root {
-    --primary-color: #2980b9;
-    --primary-color-hover: #1f5f91;
-    --background-color: #f4f4f4;
-    --white: #fff;
-    --shadow-color: rgba(0, 0, 0, 0.15);
-    --shadow-hover: rgba(0, 0, 0, 0.25);
-    --max-width: 1200px;
-    --input-padding-left: 30px;
-    --card-gap: 2rem;
-}
+/*:root {*/
+/*    --primary-color: #2980b9;*/
+/*    --primary-color-hover: #1f5f91;*/
+/*    --background-color: #f4f4f4;*/
+/*    --white: #fff;*/
+/*    --shadow-color: rgba(0, 0, 0, 0.15);*/
+/*    --shadow-hover: rgba(0, 0, 0, 0.25);*/
+/*    --max-width: 1200px;*/
+/*    --input-padding-left: 30px;*/
+/*    --card-gap: 2rem;*/
+/*}*/
 
-body {
-    font-family: Arial, sans-serif;
-    background-color: var(--background-color);
-    margin: 0;
-    display:flex;
-    flex-direction: column;
-    justify-content: center;
-}
+/*body {*/
+/*    font-family: Arial, sans-serif;*/
+/*    background-color: var(--background-color);*/
+/*    margin: 0;*/
+/*    display:flex;*/
+/*    flex-direction: column;*/
+/*    justify-content: center;*/
+/*}*/
 
-.text_research{
+/*.text_research{*/
 
-}
-
-
-.filtre-title {
-    font-weight: bold;
-    margin-bottom: 0.5rem;
-    margin-bottom: 10px;
-}
-
-.filtre-group {
-    display: flex;
-    flex-direction: row;
-
-    gap: 1rem;
-    width: 100%;
-    flex-wrap: wrap;
-}
-/* Container général des filtres */
-.filtre-group {
-    display: flex;
-    align-items: flex-end; /* Aligne verticalement les éléments */
-    gap: 5px; /* Espacement entre les blocs */
-    flex-wrap: wrap; /* Permet de passer à la ligne si l'écran est trop petit */
-    width: 100%;
-}
-/* Style de chaque bloc individuel */
-.filtre-categorie{
-    display: flex;
-    flex-direction: column;
-}
-/*.filtre-input,*/
-.filtre-button {
-    display: flex;
-    flex-direction: row;
-    flex-wrap: wrap;
-    align-items: center;
-    width: 30%;
-}
-
-.filtre-input {
-    /*flex-grow: 2;
-    position: relative;
-    min-width: 300px;
-    max-width: 800px;*/
-
-}
-
-/*
-.input-icon {
-
-    display: flex;
-    align-items: center;
-    position: relative;
-}
-
-.input-icon i {
-    position: absolute;
-    left: 10px;
-    top: 50%;
-    transform: translateY(-50%);
-}
-
-.input-icon input {
-    padding-left: var(--input-padding-left);
-    height: 2rem;
-    width: 100%;
-}
-*/
-
-.filtre-button {
-    flex-shrink: 0;
-}
-
-.filtre-categorie {
-    margin-left: auto;
-
-}
-
-/* Pour aligner l'input et l'icône dans le même bloc */
-/*
-.input-icon {
-    position: relative;
-    display: flex;
-    align-items: center;
-}
-
-.input-icon input {
-    padding-right: 30px; /* espace pour l'icône
-}
-
-.input-icon i {
-    position: absolute;
-    right: 20px;
-    color: #888;
-    pointer-events: none; /* permet de cliquer à travers l’icône
-}*/
-
-/* Bouton avec icône */
-.filtre-button {
-    width: fit-content;
-
-}
-
-/* Style optionnel pour input, select et bouton */
-input[type="text"], select {
-    padding: 5px 10px;
-    width: 100%;
-    font-size: 1rem;
-}
+/*}*/
 
 
-/* Bouton */
-.btn {
-    background: var(--primary-color);
-    color: var(--white);
-    padding: 0.5rem 1rem;
-    border: none;
-    border-radius: 5px;
-    text-decoration: none;
-    margin-top: auto;
-    width: fit-content;
-    align-self: flex-start;
-    cursor: pointer;
-    transition: background-color 0.3s;
-}
+/*.filtre-title {*/
+/*    font-weight: bold;*/
+/*    margin-bottom: 0.5rem;*/
+/*    margin-bottom: 10px;*/
+/*}*/
 
-.btn {
-    background: var(--primary-color);
-    color: var(--white);
-    padding: 0.5rem 1rem;
-    border: none;
-    border-radius: 5px;
-    text-decoration: none;
-    margin-top: auto;
-    width: fit-content;
-    align-self: flex-start;
-    cursor: pointer;
-    transition: background-color 0.3s;
-}
+/*.filtre-group {*/
+/*    display: flex;*/
+/*    flex-direction: row;*/
+
+/*    gap: 1rem;*/
+/*    width: 100%;*/
+/*    flex-wrap: wrap;*/
+/*}*/
+/*!* Container général des filtres *!*/
+/*.filtre-group {*/
+/*    display: flex;*/
+/*    align-items: flex-end;*/
+/*    gap: 5px; */
+/*    flex-wrap: wrap;*/
+/*    width: 100%;*/
+/*}*/
+/*!* Style de chaque bloc individuel *!*/
+/*.filtre-categorie{*/
+/*    display: flex;*/
+/*    flex-direction: column;*/
+/*}*/
+/*!*.filtre-input,*!*/
+/*.filtre-button {*/
+/*    display: flex;*/
+/*    flex-direction: row;*/
+/*    flex-wrap: wrap;*/
+/*    align-items: center;*/
+/*    width: 30%;*/
+/*}*/
+
+/*.filtre-input {*/
+/*    !*flex-grow: 2;*/
+/*    position: relative;*/
+/*    min-width: 300px;*/
+/*    max-width: 800px;*!*/
+
+/*}*/
+
+/*!**/
+/*.input-icon {*/
+
+/*    display: flex;*/
+/*    align-items: center;*/
+/*    position: relative;*/
+/*}*/
+
+/*.input-icon i {*/
+/*    position: absolute;*/
+/*    left: 10px;*/
+/*    top: 50%;*/
+/*    transform: translateY(-50%);*/
+/*}*/
+
+/*.input-icon input {*/
+/*    padding-left: var(--input-padding-left);*/
+/*    height: 2rem;*/
+/*    width: 100%;*/
+/*}*/
+/**!*/
+
+/*.filtre-button {*/
+/*    flex-shrink: 0;*/
+/*}*/
+
+/*.filtre-categorie {*/
+/*    margin-left: auto;*/
+
+/*}*/
+
+/*!* Pour aligner l'input et l'icône dans le même bloc *!*/
+/*!**/
+/*.input-icon {*/
+/*    position: relative;*/
+/*    display: flex;*/
+/*    align-items: center;*/
+/*}*/
+
+/*.input-icon input {*/
+/*    padding-right: 30px; !* espace pour l'icône*/
+/*}*/
+
+/*.input-icon i {*/
+/*    position: absolute;*/
+/*    right: 20px;*/
+/*    color: #888;*/
+/*    pointer-events: none; !* permet de cliquer à travers l’icône*/
+/*}*!*/
+
+/*!* Bouton avec icône *!*/
+/*.filtre-button {*/
+/*    width: fit-content;*/
+
+/*}*/
+
+/*!* Style optionnel pour input, select et bouton *!*/
+/*input[type="text"], select {*/
+/*    padding: 5px 10px;*/
+/*    width: 100%;*/
+/*    font-size: 1rem;*/
+/*}*/
+
+
+/*!* Bouton *!*/
+/*.btn {*/
+/*    background: var(--primary-color);*/
+/*    color: var(--white);*/
+/*    padding: 0.5rem 1rem;*/
+/*    border: none;*/
+/*    border-radius: 5px;*/
+/*    text-decoration: none;*/
+/*    margin-top: auto;*/
+/*    width: fit-content;*/
+/*    align-self: flex-start;*/
+/*    cursor: pointer;*/
+/*    transition: background-color 0.3s;*/
+/*}*/
 
 
 
-.btn:hover {
-    background: var(--primary-color-hover);
-}
+/*.btn:hover {*/
+/*    background: var(--primary-color-hover);*/
+/*}*/
 
 
-/* Optimisation de la grille */
-@media (max-width: 768px) {
+/*!* Optimisation de la grille *!*/
+/*@media (max-width: 768px) {*/
 
-    .filtre-group {
-        flex-direction: column;
-    }
+/*    .filtre-group {*/
+/*        flex-direction: column;*/
+/*    }*/
 
-    .filtre-input {
-        max-width: 100%;
-    }
+/*    .filtre-input {*/
+/*        max-width: 100%;*/
+/*    }*/
 
-    .text_research{
-        display: none;
-    }
-}
+/*    .text_research{*/
+/*        display: none;*/
+/*    }*/
+/*}*/
 
-/*
-@media screen and (min-width:769px) and (max-width:991px) {
-    .icon-search {
-        display: none;
-    }
-}
-*/
+/*!**/
+/*@media screen and (min-width:769px) and (max-width:991px) {*/
+/*    .icon-search {*/
+/*        display: none;*/
+/*    }*/
+/*}*/
+/**!*/
