--- a/src/main/resources/static/css/mesEncheres.css
+++ b/src/main/resources/static/css/mesEncheres.css
@@ -99,7 +99,7 @@
     padding: 1rem 0;
 }
 
-.card {
+.card_mesEncheres {
     flex: 0 0 auto;
     min-width: 250px;
     max-width: 280px;
@@ -108,13 +108,20 @@
     overflow: hidden;
     background-color: white;
     box-shadow: 0 2px 5px rgba(0,0,0,0.1);
+    display: inline-block;
+    margin-top: 0.5rem;
+    padding: 0.4rem 0.8rem;
+    text-decoration: none;
+    font-size: 0.9rem;
 }
 
 
 .card-image img {
     width: 100%;
-    height: 160px;
+    height: auto;
+    height-max: 160px;
     object-fit: cover;
+
 }
 
 .card-content {
@@ -132,16 +139,6 @@
     font-size: 0.95rem;
 }
 
-.card {
-    display: inline-block;
-    margin-top: 0.5rem;
-    background-color: #007bff;
-    color: white;
-    padding: 0.4rem 0.8rem;
-    border-radius: 6px;
-    text-decoration: none;
-    font-size: 0.9rem;
-}
 
 /* CAROUSEL */
 .carousel {
