--- a/src/main/resources/templates/mesEncheres.html
+++ b/src/main/resources/templates/mesEncheres.html
@@ -5,7 +5,6 @@
     <link rel="stylesheet" data-th-href="@{/css/mesEncheres.css}">
     <link rel="stylesheet" data-th-href="@{/css/mesEncheres_mobile.css}">
     <link rel="stylesheet" data-th-href="@{/css/form-filtres-encheres.css}">
-    <link rel="stylesheet" data-th-href="@{/css/filtre-index-recherche.css}">
 </div>
 
 <main>
@@ -59,13 +58,13 @@
             <button class="carousel-btn prev">&#10094;</button>
             <div class="carousel-viewport">
                 <div class="card-container">
-                    <div class="card" th:each="article : ${encheresOuvertes}">
+                    <div class="card_mesEncheres" th:each="article : ${encheresOuvertes}">
                         <div class="card-image">
                             <img th:src="@{${article.urlImage}}" alt="Image de l'article">
                         </div>
                         <div class="card-content">
                             <h3 th:text="${article.nomArticle}" class="card-title">Nom article</h3>
-                            <p><strong>Prix :</strong> <span th:text="${article.miseAPrix} + ' crédits'"></span></p>
+                            <p><strong>Mise a prix :</strong> <span th:text="${article.miseAPrix} + ' crédits'"></span></p>
                             <p><strong>Fin :</strong> <span th:text="${#dates.format(article.dateFinEncheres, 'dd/MM/yyyy')}"></span></p>
                             <p><strong>Vendeur :</strong> <span th:text="${article.utilisateur.pseudo}"></span></p>
                             <a th:href="@{'/encheres/' + ${article.noArticle}}" class="btn">Voir</a>
@@ -84,7 +83,7 @@
             <button class="carousel-btn prev">&#10094;</button>
             <div class="carousel-viewport">
                 <div class="card-container">
-                    <div class="card" th:each="article : ${encheresEnCours}">
+                    <div class="card_mesEncheres" th:each="article : ${encheresEnCours}">
                         <div class="card-image">
                             <img th:src="@{${article.urlImage}}" alt="Image de l'article">
                         </div>
@@ -109,7 +108,7 @@
             <button class="carousel-btn prev">&#10094;</button>
             <div class="carousel-viewport">
                 <div class="card-container">
-                    <div class="card" th:each="article : ${encheresRemportes}">
+                    <div class="card_mesEncheres" th:each="article : ${encheresRemportes}">
                         <div class="card-image">
                             <img th:src="@{${article.urlImage}}" alt="Image de l'article">
                         </div>
@@ -158,7 +157,7 @@
             <button class="carousel-btn prev">&#10094;</button>
             <div class="carousel-viewport">
                 <div class="card-container">
-                    <div class="card" th:each="article : ${venteNonDebutes}">
+                    <div class="card_mesEncheres" th:each="article : ${venteNonDebutes}">
                         <div class="card-image">
                             <img th:src="@{${article.urlImage}}" alt="Image de l'article">
                         </div>
@@ -184,7 +183,7 @@
             <button class="carousel-btn prev">&#10094;</button>
             <div class="carousel-viewport">
                 <div class="card-container">
-                    <div class="card" th:each="article : ${venteTerminees}">
+                    <div class="card_mesEncheres" th:each="article : ${venteTerminees}">
                         <div class="card-image">
                             <img th:src="@{${article.urlImage}}" alt="Image de l'article">
                         </div>
@@ -218,7 +217,6 @@
                 });
             });
         }
-
         window.onload = () => {
             switchGroup('');
         };
