--- a/src/main/resources/templates/fragments/detailVente.html
+++ b/src/main/resources/templates/fragments/detailVente.html
@@ -18,15 +18,18 @@
     <li data-th-text="'Vendeur : ' + ${article.utilisateur.pseudo}"></li>
   </ul>
   <form data-th-if="${mode=='enchere'}" data-th-action="@{'/encherir/' + ${article.noArticle}}" method="post">
-    <label for="proposition">Ma proposition : </label>
-    <input data-th-if="${enchere.montantEnchere == 0}" id="proposition" type="number" name="proposition"
-           data-th-min="${article.miseAPrix +1}"
-           th:value="${article.miseAPrix +1}"
-           step="1" required>
-    <input data-th-if="${enchere.montantEnchere > 0}" id="proposition" type="number" name="proposition"
-           data-th-min="${enchere.montantEnchere +1}"
-           th:value="${enchere.montantEnchere +1}"
-           step="1" required>
-    <button type="submit">Enchérir</button>
+    <div data-th-if="${article.utilisateur.noUtilisateur != utilisateur.noUtilisateur}">
+      <label for="proposition">Ma proposition : </label>
+      <input data-th-if="${enchere.montantEnchere == 0}" id="proposition" type="number" name="proposition"
+             data-th-min="${article.miseAPrix +1}"
+             th:value="${article.miseAPrix +1}"
+             step="1" required>
+      <input data-th-if="${enchere.montantEnchere > 0}" id="proposition" type="number" name="proposition"
+             data-th-min="${enchere.montantEnchere +1}"
+             th:value="${enchere.montantEnchere +1}"
+             step="1" required>
+      <button type="submit">Enchérir</button>
+    </div>
+
   </form>
 </div>
