modif mise a prix dans index

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -62,7 +62,7 @@
                         </div>
                         <div class="card-content_index">
                             <h3 class="card-title_index" th:text="${articles[i + 1].nomArticle}">Nom article</h3>
-                            <p><strong>Mise a prix</strong>
+                            <p><strong>Mise à prix</strong>
                                 <span th:text="${articles[i + 1].miseAPrix} + ' crédits'">10 crédits</span></p>
                             <p><strong>Fin :</strong>
                                 <span th:text="${#dates.format(articles[i + 1].dateFinEncheres, 'dd/MM/yyyy')}"></span></p>
