--- a/src/main/resources/static/css/mesEncheres.css
+++ b/src/main/resources/static/css/mesEncheres.css
@@ -139,6 +139,21 @@
     font-size: 0.95rem;
 }
 
+.btn-encheres{
+    display: inline-block;
+        background: var(--primary-color);
+        color: var(--white);
+        padding: 0.5rem 1rem;
+        border-radius: 4px;
+        text-decoration: none;
+        border: none;
+        cursor: pointer;
+        transition: background-color 0.3s;
+        margin-top: 1rem;
+        width: fit-content;
+        align-self: flex-start;
+}
+
 
 /* CAROUSEL */
 .carousel {
