--- a/src/main/resources/templates/mesEncheres.html
+++ b/src/main/resources/templates/mesEncheres.html
@@ -64,7 +64,7 @@
                         </div>
                         <div class="card-content">
                             <h3 th:text="${article.nomArticle}" class="card-title">Nom article</h3>
-                            <p><strong>Mise a prix :</strong> <span th:text="${article.miseAPrix} + ' crédits'"></span></p>
+                            <p><strong>Mise à prix :</strong> <span th:text="${article.miseAPrix} + ' crédits'"></span></p>
                             <p><strong>Fin :</strong> <span th:text="${#dates.format(article.dateFinEncheres, 'dd/MM/yyyy')}"></span></p>
                             <p><strong>Vendeur :</strong> <span th:text="${article.utilisateur.pseudo}"></span></p>
                             <a th:href="@{'/encheres/' + ${article.noArticle}}" class="btn_mesEncheres">Voir</a>
@@ -89,7 +89,7 @@
                         </div>
                         <div class="card-content">
                             <h3 th:text="${article.nomArticle}" class="card-title">Nom article</h3>
-                            <p><strong>Prix :</strong> <span th:text="${article.miseAPrix} + ' crédits'"></span></p>
+                            <p><strong>Mise à prix :</strong> <span th:text="${article.miseAPrix} + ' crédits'"></span></p>
                             <p><strong>Fin :</strong> <span th:text="${#dates.format(article.dateFinEncheres, 'dd/MM/yyyy')}"></span></p>
                             <p><strong>Vendeur :</strong> <span th:text="${article.utilisateur.pseudo}"></span></p>
                             <a th:href="@{'/encheres/' + ${article.noArticle}}" class="btn_mesEncheres">Voir</a>
@@ -114,7 +114,7 @@
                         </div>
                         <div class="card-content">
                             <h3 th:text="${article.nomArticle}" class="card-title">Nom article</h3>
-                            <p><strong>Prix :</strong> <span th:text="${article.miseAPrix} + ' crédits'"></span></p>
+                            <p><strong>Mise à prix :</strong> <span th:text="${article.miseAPrix} + ' crédits'"></span></p>
                             <p><strong>Fin :</strong> <span th:text="${#dates.format(article.dateFinEncheres, 'dd/MM/yyyy')}"></span></p>
                             <p><strong>Vendeur :</strong> <span th:text="${article.utilisateur.pseudo}"></span></p>
                             <a th:href="@{'/encheres/' + ${article.noArticle}}" class="btn_mesEncheres">Voir</a>
@@ -139,7 +139,7 @@
                         </div>
                         <div class="card-content">
                             <h3 th:text="${article.nomArticle}" class="card-title">Nom article</h3>
-                            <p><strong>Prix :</strong> <span th:text="${article.miseAPrix} + ' crédits'"></span></p>
+                            <p><strong>Mise à prix :</strong> <span th:text="${article.miseAPrix} + ' crédits'"></span></p>
                             <p><strong>Fin :</strong> <span th:text="${#dates.format(article.dateFinEncheres, 'dd/MM/yyyy')}"></span></p>
                             <p><strong>Vendeur :</strong> <span th:text="${article.utilisateur.pseudo}"></span></p>
                             <a th:href="@{'/encheres/' + ${article.noArticle}}" class="btn_mesEncheres">Voir</a>
@@ -163,7 +163,7 @@
                         </div>
                         <div class="card-content">
                             <h3 th:text="${article.nomArticle}" class="card-title">Nom article</h3>
-                            <p><strong>Prix :</strong> <span th:text="${article.miseAPrix} + ' crédits'"></span></p>
+                            <p><strong>Mise à prix :</strong> <span th:text="${article.miseAPrix} + ' crédits'"></span></p>
                             <p><strong>Fin :</strong> <span th:text="${#dates.format(article.dateFinEncheres, 'dd/MM/yyyy')}"></span></p>
                             <p><strong>Vendeur :</strong> <span th:text="${article.utilisateur.pseudo}"></span></p>
                             <a th:href="@{'/encheres/' + ${article.noArticle}}" class="btn_mesEncheres">Voir</a>
@@ -189,7 +189,7 @@
                         </div>
                         <div class="card-content">
                             <h3 th:text="${article.nomArticle}" class="card-title">Nom article</h3>
-                            <p><strong>Prix :</strong> <span th:text="${article.miseAPrix} + ' crédits'"></span></p>
+                            <p><strong>Mise à prix :</strong> <span th:text="${article.miseAPrix} + ' crédits'"></span></p>
                             <p><strong>Fin :</strong> <span th:text="${#dates.format(article.dateFinEncheres, 'dd/MM/yyyy')}"></span></p>
                             <p><strong>Vendeur :</strong> <span th:text="${article.utilisateur.pseudo}"></span></p>
                             <a th:href="@{'/encheres/' + ${article.noArticle}}" class="btn">Voir</a>
