--- a/src/main/resources/static/css/article.css
+++ b/src/main/resources/static/css/article.css
@@ -40,6 +40,29 @@
     align-items: center;
     text-align: center;
 }
+/* Preview image */
+
+.image-preview-container {
+    width: 100%;
+    max-width: 300px;
+    margin-top: 1rem;
+    border: 1px solid #ccc;
+    border-radius: 8px;
+    overflow: hidden;
+    background: #f9f9f9;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    aspect-ratio: 1 / 1; /* carré */
+}
+
+.image-preview {
+    max-width: 100%;
+    max-height: 100%;
+    object-fit: contain;
+    display: block;
+}
+
 
 /* Carte Retrait */
 .retrait-card-article {
