--- a/src/main/resources/templates/admin.html
+++ b/src/main/resources/templates/admin.html
@@ -8,7 +8,7 @@
 <body>
 <main>
     <h1 class="title-animated">Espace d'administration</h1>
-    <p class="email-text">admin@example.com</p>
+    <p class="email-text" data-th-text="${utilisateur.email}">admin@example.com</p>
 
     <div class="admin-container">
         <div class="row">
