--- a/src/main/resources/static/css/index.css
+++ b/src/main/resources/static/css/index.css
@@ -87,6 +87,7 @@
 /* === CARD STYLE === */
 .card_index {
     display: flex;
+    flex-direction: column;
     border: 1px solid #ccc;
     border-radius: 10px;
     overflow: hidden;
@@ -94,8 +95,12 @@
     box-shadow: 0 2px 6px rgba(0, 0, 0, 0.1);
     margin: 0.3rem;
     height: auto;
-    max-width: 400px;
+    max-height: 420px;
+    max-width: 280px;
     width: 100%;
+}
+.card-content_index p, .card-content_index h3 {
+    margin: 0.5rem 0;
 }
 
 .card-image_index {
