--- a/src/main/resources/static/css/mesEncheres.css
+++ b/src/main/resources/static/css/mesEncheres.css
@@ -139,7 +139,7 @@
     font-size: 0.95rem;
 }
 
-.btn-encheres{
+.btn_mesEncheres{
     display: inline-block;
         background: var(--primary-color);
         color: var(--white);
